# cribot

./: .dockerignore  .env.dist  Dockerfile  bot.py  config.py  docker-compose.yml  pyproject.toml
handlers/: admin.py  simple_menu.py
settings/: config.py  declarations.py
